Prom+Grafana_in_k8s/k8s_master/grafana/manifests/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: ClusterIP
  ports:
  - port: 80 # Porta a ser exposta pelo SERVICE
    targetPort: 3000 # Porta que a aplicação está rodando no POD
  selector:
    application: grafana
